# firmware

./: .gitignore  .gitmodules  3TCAM_Protocol.docx
app/: pyproject.toml
app/src/app/: __init__.py  frame.py
br-ext-chip-sigmastar/configs/: ssc337de_ultimate_defconfig
general/package/: Config.in
general/package/libfreetype-openipc/: Config.in  libfreetype-openipc.mk
general/package/libharfbuzz-openipc/: Config.in  libharfbuzz-openipc.mk
general/package/libmp4v2-openipc/: Config.in  libmp4v2-openipc.mk
general/package/serial/: .clang-format  Config.in  ap  readme.md  serial.ini  serial.mk  serial.yaml  switch  switch.sh
general/package/serial/src/: Makefile  app_config.c  app_config.h  bitmap.c  bitmap.h  common.h  compat.c  config.c  config.h  data_define.h  main.c  region.c  region.h  schrift.c  schrift.h  serial.c  serial.h  snapshot.c  snapshot.h  storage.c  storage.h  text.c  text.h  tools.c  tools.h  utils.c  utils.h  watchdog.c  watchdog.h
