[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "savaobay", email = "savaobay2@gmail.com" }
]
dependencies = [
    "pyserial>=3.5",
    "numpy>=1.26.4",
    "pillow>=10.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
